# atto

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE.MIT  Makefile  atto.mk  atto_app.h  atto_gl.h  atto_io.h  atto_udio.h  build-linux-rpi.sh  build-linux.sh  build-windows.sh
.github/workflows/: cmake-multi-platform.yml
atto/: app.h  gl.h  math.h  platform.h
examples/: CMakeLists.txt  app.c  cube.c  fb.c  ray.glsl  ray.rchit  ray.rgen  ray.rint  ray.rmiss  ray_tri.rchit  shader.frag  shader.vert  tri.c  tribench.c  vk_ray.c  vk_tri.c
include/atto/: app.h  gl.h  io.h  math.h  platform.h  udio.h  worobushek.h
samples/: app.c  cube.c  fb.c  tri.c  tribench.c
src/: app_egl.c  app_evdev.c  app_kms.c  app_linux.c  app_main.c  app_rpi.c  app_vulkan.c  app_wayland.c  app_windows.c  app_x11.c
vs2015/: app.vcxproj  app.vcxproj.filters  atto.props  cube.vcxproj  cube.vcxproj.filters  examples.props  examples.sln  examples.vcxproj  fb.vcxproj  fb.vcxproj.filters  tri.vcxproj  tri.vcxproj.filters  tribench.vcxproj  tribench.vcxproj.filters
